# phpls-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  sc.sh
client/: package-lock.json  package.json
client/src/: extension.ts
docs/: backend.md  environment.md  index.md  php-parser.md  phpls-rs.md
docs/dsl/: index.dsl
docs/processes/: backend-source_to_ast.md  initialize.md
src/: backend.rs  expression.rs  main.rs  node.rs  parser.rs  scanner.rs  statement.rs  token.rs
src/backend/: completion.rs  did_change.rs  did_change_watched_files.rs  did_close.rs  did_open.rs  document_highlight.rs  document_symbol.rs  formatting.rs  goto_definition.rs  goto_implementation.rs  hover.rs  mod.rs  symbol.rs
src/environment/: class.rs  fs.rs  import.rs  index.rs  mod.rs  namespace.rs  scope.rs  symbol.rs  traverser.rs
src/environment/visitor/: mod.rs  name_resolver.rs  workspace_symbol.rs
src/formatter/: expressions.rs  loops.rs  mod.rs  v2.rs
src/formatter/classes/: mod.rs
src/parser/: arrays.rs  calls.rs  classes.rs  comments.rs  conditionals.rs  declarations.rs  exception_handling.rs  expressions.rs  functions.rs  keywords.rs  loops.rs  mod.rs  namespaces.rs  node.rs  scanner.rs  token.rs  try_catch.rs  types.rs  variables.rs
src/parser/ast/: arrays.rs  attributes.rs  calls.rs  classes.rs  comments.rs  conditionals.rs  exception_handling.rs  expressions.rs  functions.rs  keywords.rs  loops.rs  mod.rs  namespaces.rs  types.rs  variables.rs
src/suggester/: mod.rs
