[package]
name = "phpls-rs"
version = "0.1.0"
authors = ["sawmurai <fabian.becker@b-it-d.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.6"
spmc = "0.3.0"
tower-lsp = "0.13.3"
tokio = { version = "0.2", features = ["full"] }
indextree = "4.0"