[package]
name = "phpls-rs"
version = "0.1.0"
authors = ["sawmurai <fabian.becker@b-it-d.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.6"
spmc = "0.3.0"
tower-lsp = { version = "0.15.1"  }
lsp-types= { version = "0.92" }
tokio = { version = "1.6", features = ["full"] }
indextree = "4.0"
clap = "2.23.3"
ignore = "0.4"
crossbeam-channel = "0.5.0"
walkdir = "2"

[profile.release]
panic = "abort"